{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 32,
  "lineage": "5abbbecc-df4f-dfe2-0dc3-805165d5caa2",
  "resources": [
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:188525776863:security-group/sg-069aa2aa4a481deac",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-069aa2aa4a481deac",
            "ingress": [],
            "name": "eks-dev20200126064017174400000002",
            "name_prefix": "eks-dev",
            "owner_id": "188525776863",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-dev-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014be38c2058c2123"
          }
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:188525776863:security-group/sg-0a438b9b6a6490e7d",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0a438b9b6a6490e7d",
            "ingress": [],
            "name": "eks-dev20200126065132975500000006",
            "name_prefix": "eks-dev",
            "owner_id": "188525776863",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-dev-eks_worker_sg",
              "kubernetes.io/cluster/eks-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-014be38c2058c2123"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4170912453",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-069aa2aa4a481deac",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-4037121557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-069aa2aa4a481deac",
            "self": false,
            "source_security_group_id": "sg-0a438b9b6a6490e7d",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-777840064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a438b9b6a6490e7d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1821530638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a438b9b6a6490e7d",
            "self": false,
            "source_security_group_id": "sg-069aa2aa4a481deac",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2468864627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a438b9b6a6490e7d",
            "self": false,
            "source_security_group_id": "sg-069aa2aa4a481deac",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3338451488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a438b9b6a6490e7d",
            "self": false,
            "source_security_group_id": "sg-0a438b9b6a6490e7d",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    }
  ]
}